Split ksmserver into a core application that handles startup and ksmserver
WIP. Full of hacks that are obviously only temporary.

--- a/startkde/CMakeLists.txt
+++ b/startkde/CMakeLists.txt
@@ -3,6 +3,8 @@ add_subdirectory(kstartupconfig)
 add_subdirectory(ksyncdbusenv)
 add_subdirectory(waitforname)
 add_subdirectory(kcheckrunning)
+add_subdirectory(ksession)
+
 
 #FIXME: reconsider, looks fishy
 if(NOT CMAKE_INSTALL_PREFIX STREQUAL "/usr")
